# awesome-code

./: .gitignore  AGENTS.md  PROJECT_OVERVIEW.md  README.md  book.csv  build.gradle.kts  language.txt  prefsdemo.xml  settings.gradle.kts
.cursor/: settings.json
.trae/documents/: Python图像查看器开发计划.md  plan_20260212_003129.md  区块链学习网站提示词生成.md
ai/: snake_game.py
android/CrossProcessRenderDemo/: local.properties  settings.gradle.kts
android/RemoteViewsDemo/: build.gradle.kts  local.properties  settings.gradle.kts
android/androidx/: .gitignore  CLAUDE.md  DynamicWindowMediator.java  DynamicWindowViewController.java  build.gradle.kts  findings.md  gradle.properties  progress.md  readme.txt  settings.gradle.kts  task_plan.md
android/hello-capacitor-app/: .gitignore  ANDROID_RUN_MECHANISM.md  APK_BUILD_GUIDE.md  APK_BUILD_INSTRUCTIONS.md  BUILD_DEPLOYMENT.md  BUILD_SUCCESS.md  CAPACITOR_PRINCIPLES.md  DOCUMENTATION_INDEX.md  README.md  (+6 more)
awesome-go/: readme.md
blockchain-learning/: community.html  courses.html  index.html  profile.html  resources.html
c++/cpp_reference/: CMakeLists.txt  _chrono.cpp  _crypt.cpp  _json.cpp  _main.h  _map.cpp  _pointers.cpp  _rv.cpp  _set.cpp  _string.cpp  _struct.cpp  _vector.cpp  _vector.h  main.cpp
claude/: build.gradle.kts
config/: config.json
dagger/: build.gradle.kts
erl/: simple-erlang.ipr  simple-erlang.iws
goodcode/: build.gradle.kts
gradle/: init.gradle  libs.versions.toml
groovy/: build.gradle.kts
grpc/: build.gradle.kts
js/: asyc.js
jwt/: build.gradle.kts
lua/: main.lua  test.lua  test1.lua
music-player/: .gitignore  AGENTS.md  index.html  lyrics.html  package-lock.json  package.json  start.bat  start.ps1  start.sh  test-audio.js  vite.config.ts  vitest.config.ts
py-imageviewer/: .env.example  README.md  main.py  pyproject.toml
py-imageviewer/src/imageviewer/: __init__.py  main.py
py-imageviewer/src/imageviewer/core/: exceptions.py  models.py
py-imageviewer/src/imageviewer/services/: __init__.py  base_search_service.py  bing_service.py  collection_service.py  download_service.py  google_service.py  local_service.py  unsplash_service.py
py-imageviewer/src/imageviewer/ui/: __init__.py  enhanced_online_viewer.py  image_viewer.py  local_viewer.py  main_window.py  online_viewer.py  settings_dialog.py  styles.py
py-imageviewer/src/imageviewer/utils/: __init__.py  config.py  image_utils.py  logger.py
py-imageviewer/tests/: conftest.py  test_base_search_service.py  test_bing_service.py  test_collection_service.py  test_download_service.py  test_google_service.py  test_image_utils.py  test_local_service.py  test_models.py  test_unsplash_service.py
python/: README.md  builtin.md  iflow.py  main.py  pyproject.toml  readme.md
python/basic/: __init__.py
python/builtin_funcs/: __init__.py  advanced_async.py  code_execution.py  math_numeric.py  object_introspection.py  sequence_iter.py  type_conversion.py
python/builtins/: __init__.py  basis.py
python/cli_tools/: README.md  __init__.py  advanced.py  basic.py  file_ops.py  interactive.py
python/docs/: builtin.md
python/fortran/: my_fortran_lib.f90  test.py
python/ios/: __init__.py
python/lambdas/: __init__.py
python/lee/: __init__.py
python/modules/: Secrets.py
python/oop/: __init__.py
python/pangu/: __init__.py  app.py
python/plot/: course01.py
python/pytorch_tutorials/: lesson_01.py  read_data.py
python/regex/: __init__.py
python/streamlit_demo/: main.py  pyproject.toml
python/threads/: __init__.py
python/ttorch/: onehots.py  第七课.py  第二课.py
python/typer_/: my_custom_script.py  typer_.py
rust/: readme.md
rust-tauri-demo/: ARCHITECTURE.md  Cargo.toml  README.md  tauri.conf.json
rust-tauri-demo/icons/: icon.icns
rust-tauri-demo/src/: main.rs
rust-tauri-demo/src/examples/: level10_real_world.rs  level1_basics.rs  level2_functions.rs  level3_ownership.rs  level4_structs.rs  level5_traits.rs  level6_errors.rs  level7_collections.rs  level8_concurrency.rs  level9_files.rs  mod.rs
rust-tauri-demo/ui/: app.js  index.html  package.json  pnpm-lock.yaml  styles.css
rxjava3/: build.gradle.kts
shell/: array.sh  basic.sh  func.sh  if.sh  loop.sh  ope.sh  params.sh  readme.md  test.sh
zig/: hello-world.zig
zip/: build.gradle.kts
(+2555 files in other folders)
