[package]
name = "rust-tauri-demo"
version = "0.1.0"
description = "Rust 从简单到复杂的学习 Demo"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日期时间
chrono = { version = "0.4", features = ["serde"] }

# 正则表达式
regex = "1"

# 序列化
serde_repr = "0.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
